Products Page Jumping Items Issue Solved

--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -3,3 +3,12 @@
 html {
   font-family: 'Raleway', sans-serif;
 }
+
+.container {
+  padding: 100px 100px;
+}
+
+.responsiveImage {
+  width: 100%;
+  height: auto;
+}
